Mac fork: full High Sierra compatibility pass + Setup.app subproject
10-agent Opus audit pass. Changes spanning JavaFX downgrade 21->17.0.12,
prism es2,sw + VRAM caps for the AMD HD 6750M, three-way PlatformPaths
agreement (panel/bridge/setup all -> ~/Library/Application Support/
FatherEye), MarkerFile atomic write, MarkerDiscovery PID liveness,
PipeClient named-pipe refusal on non-Windows, coalesced redraw via
AnimationTimer to eliminate FX-saturation on Sandy Bridge, BackupService
empty-dir guards, ServerLaunchSpec JDK-8 filter via release-file parse,
JVM args reconciled (Aikar set, dropped -noverify), TILE_CACHE_LIMIT
4096->1024, StatsPane points 900->300.

New setup/ subproject builds Father Eye Setup.app: JDK detection,
server folder picker, Forge 1.16.5-36.2.39 download + install, bridge
mod copy from embedded resource, EULA + server.properties + run.sh
generation, panel config wiring. Cancel mid-install properly kills the
Forge process. Adoptium URLs include package=jdk.

Removed upstream Windows-only tasks (jpackageExe, singleFileExe,
deployToServer, distributablePrep) and stop-server.ps1.

LSMinimumSystemVersion=10.13.0 patched into Info.plist via plutil
-insert with -replace fallback. java.datatransfer added to
--add-modules. Bridge stays at 0.2.9 (unchanged); panel 0.3.0-mac.2.

User will test on Mid 2011 iMac with High Sierra. Gradle daemon must
run on JDK 17 (JavaFX plugin requires 11+).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>