@@ -8,9 +8,9 @@ import java.util.Collections;
 import java.util.List;
 
 /**
- * How to launch the server. Defaults match the user's TomCraft-Server
- * setup at {@code C:\Users\lukeo\Desktop\TomCraft-Server\}; M15 lets the
- * config UI override every field at runtime.
+ * How to launch the server. Mac fork: defaults are placeholders that
+ * the Setup wizard fills in on first run. The pre-boot Configure
+ * dialog lets the user edit every field at runtime.
  */
 public final class ServerLaunchSpec {
 
@@ -33,44 +33,43 @@ public final class ServerLaunchSpec {
     }
 
     /**
-     * OS-aware defaults. On Windows, mirror TomCraft-Server/start.bat. On
-     * macOS/Linux, return placeholder paths that won't crash autoStart —
-     * the user must edit %LOCALAPPDATA%/FatherEye/config.json (or the
-     * equivalent under {@code ~/FatherEye/config.json} on Mac/Linux)
-     * before first launch. {@link io.fathereye.panel.config.AppConfig.ServerRuntime#autoStart}
-     * also defaults to {@code false} on non-Windows so the panel doesn't
-     * try to spawn a process at the placeholder java path.
+     * Cross-platform defaults. Mac fork: returns placeholder paths
+     * everywhere — the Setup wizard fills the real values into
+     * AppConfig on first run. The panel's autoStart is OFF until the
+     * Setup wizard succeeds, so we never try to launch an empty path.
+     *
+     * <p>JVM args mirror Aikar's recommended Forge 1.16.5 G1GC tuning
+     * (https://aikar.co/mcflags.html), adapted for a 32 GB Mac with
+     * a 12 GB heap. The Setup wizard rewrites these into
+     * {@code <serverDir>/user_jvm_args.txt} so Forge's
+     * {@code run.sh} picks them up.
      */
     public static ServerLaunchSpec defaults() {
-        boolean windows = System.getProperty("os.name", "").toLowerCase().startsWith("windows");
-        if (windows) {
-            return new ServerLaunchSpec(
-                    Paths.get("C:\\Users\\lukeo\\Desktop\\TomCraft-Server"),
-                    "C:\\Program Files\\Eclipse Adoptium\\jdk-8.0.482.8-hotspot\\bin\\java.exe",
-                    Arrays.asList(
-                            "-Xmx8G", "-Xms4G",
-                            "-XX:+UseG1GC",
-                            "-XX:+PrintGCDetails", "-XX:+PrintGCDateStamps", "-XX:+PrintGCTimeStamps",
-                            "-Xloggc:logs/gc.log",
-                            "-XX:+HeapDumpOnOutOfMemoryError", "-XX:HeapDumpPath=crash-reports/",
-                            "-XX:G1HeapRegionSize=4M",
-                            "-XX:MaxGCPauseMillis=100",
-                            "-XX:+ParallelRefProcEnabled",
-                            "-Xbootclasspath/a:server-client-stubs.jar",
-                            "-noverify"
-                    ),
-                    "forge-1.16.5-36.2.39.jar",
-                    Collections.singletonList("nogui")
-            );
-        }
-        // Non-Windows: placeholder paths. The launcher will refuse to run
-        // these (process start fails with "no such file"), but the failure
-        // is caught and shown in the panel rather than crashing autoStart.
         String home = System.getProperty("user.home", ".");
         return new ServerLaunchSpec(
-                Paths.get(home, "TomCraft-Server"),
-                "/usr/bin/java",
-                Arrays.asList("-Xmx4G", "-Xms2G", "-XX:+UseG1GC"),
+                Paths.get(home, "Minecraft Server"),
+                "",  // empty -> use $JAVA_HOME/bin/java or PATH
+                Arrays.asList(
+                        "-Xms8G", "-Xmx12G",
+                        "-XX:+UseG1GC",
+                        "-XX:+ParallelRefProcEnabled",
+                        "-XX:MaxGCPauseMillis=200",
+                        "-XX:+UnlockExperimentalVMOptions",
+                        "-XX:+DisableExplicitGC",
+                        "-XX:+AlwaysPreTouch",
+                        "-XX:G1NewSizePercent=30",
+                        "-XX:G1MaxNewSizePercent=40",
+                        "-XX:G1HeapRegionSize=8M",
+                        "-XX:G1ReservePercent=20",
+                        "-XX:G1HeapWastePercent=5",
+                        "-XX:G1MixedGCCountTarget=4",
+                        "-XX:InitiatingHeapOccupancyPercent=15",
+                        "-XX:G1MixedGCLiveThresholdPercent=90",
+                        "-XX:G1RSetUpdatingPauseTimePercent=5",
+                        "-XX:SurvivorRatio=32",
+                        "-XX:+PerfDisableSharedMem",
+                        "-XX:MaxTenuringThreshold=1"
+                ),
                 "forge-1.16.5-36.2.39.jar",
                 Collections.singletonList("nogui")
         );
@@ -78,12 +77,119 @@ public final class ServerLaunchSpec {
 
     public List<String> buildCommand() {
         List<String> cmd = new ArrayList<>();
-        cmd.add(javaPath);
+        cmd.add(resolveJavaPath());
         cmd.addAll(jvmArgs);
         cmd.add("-jar");
         cmd.add(jarName);
         cmd.addAll(mainArgs);
         return cmd;
+    }
+
+    /**
+     * Resolve the Java binary used to launch the server. If {@link #javaPath}
+     * is non-empty AND points at an existing file, use it verbatim. Otherwise
+     * fall back through a sequence of standard Mac/Linux/Windows locations.
+     *
+     * <p>The Setup wizard writes an absolute path into the config on first
+     * run, so this fallback is only exercised when the user clears the field
+     * or hand-edits the config to an invalid path. Returning {@code "java"}
+     * as last resort lets the OS PATH resolver have a shot — the launcher's
+     * existing exception handling will surface a clean error if even that
+     * fails.
+     */
+    private String resolveJavaPath() {
+        if (javaPath != null && !javaPath.isEmpty()) {
+            java.nio.file.Path explicit = Paths.get(javaPath);
+            if (java.nio.file.Files.isExecutable(explicit)) return javaPath;
+        }
+        // $JAVA_HOME (set by Adoptium installer, brew, asdf, jenv).
+        String jhome = System.getenv("JAVA_HOME");
+        if (jhome != null && !jhome.isEmpty()) {
+            String suffix = isWindows() ? "java.exe" : "java";
+            java.nio.file.Path p = Paths.get(jhome, "bin", suffix);
+            if (java.nio.file.Files.isExecutable(p)) return p.toString();
+        }
+        // Mac fork (audit 6 BUG 3): scan /Library/Java/JavaVirtualMachines
+        // for a JDK 8 install — Forge 1.16.5 requires Java 8 specifically.
+        // Returning the first JDK regardless of major version (upstream
+        // behaviour) led to a Forge UnsupportedClassVersionError when
+        // the user only had Temurin 17 installed. Now we read each
+        // candidate's `release` file and only accept JAVA_VERSION="1.8.x".
+        if (isMac()) {
+            java.nio.file.Path jvms = Paths.get("/Library/Java/JavaVirtualMachines");
+            if (java.nio.file.Files.isDirectory(jvms)) {
+                try (java.nio.file.DirectoryStream<java.nio.file.Path> stream =
+                             java.nio.file.Files.newDirectoryStream(jvms)) {
+                    for (java.nio.file.Path entry : stream) {
+                        java.nio.file.Path home = entry.resolve("Contents/Home");
+                        java.nio.file.Path candidate = home.resolve("bin/java");
+                        if (java.nio.file.Files.isExecutable(candidate)
+                                && readReleaseMajor(home) == 8) {
+                            return candidate.toString();
+                        }
+                    }
+                } catch (Exception ignored) {}
+            }
+        }
+        // Linux: try /usr/lib/jvm/*/bin/java with the same JDK 8 filter.
+        if (isLinux()) {
+            java.nio.file.Path jvms = Paths.get("/usr/lib/jvm");
+            if (java.nio.file.Files.isDirectory(jvms)) {
+                try (java.nio.file.DirectoryStream<java.nio.file.Path> stream =
+                             java.nio.file.Files.newDirectoryStream(jvms)) {
+                    for (java.nio.file.Path entry : stream) {
+                        java.nio.file.Path candidate = entry.resolve("bin/java");
+                        if (java.nio.file.Files.isExecutable(candidate)
+                                && readReleaseMajor(entry) == 8) {
+                            return candidate.toString();
+                        }
+                    }
+                } catch (Exception ignored) {}
+            }
+        }
+        // Last resort: bare "java", relies on PATH.
+        return isWindows() ? "java.exe" : "java";
+    }
+
+    /** Mac fork (audit 6): parse the JDK home's `release` file for
+     *  JAVA_VERSION and return the major version (8, 11, 17, ...).
+     *  Returns -1 on any failure so the caller skips this candidate.
+     *  The release file is text:
+     *    JAVA_VERSION="1.8.0_402"   (Java 8)
+     *    JAVA_VERSION="17.0.13"     (Java 11+)
+     */
+    private static int readReleaseMajor(java.nio.file.Path home) {
+        java.nio.file.Path rel = home.resolve("release");
+        if (!java.nio.file.Files.isReadable(rel)) return -1;
+        try {
+            for (String line : java.nio.file.Files.readAllLines(rel,
+                    java.nio.charset.StandardCharsets.UTF_8)) {
+                if (!line.startsWith("JAVA_VERSION=")) continue;
+                String v = line.substring("JAVA_VERSION=".length()).trim();
+                if (v.startsWith("\"") && v.endsWith("\"")) v = v.substring(1, v.length() - 1);
+                if (v.startsWith("1.")) {
+                    int dot = v.indexOf('.', 2);
+                    return Integer.parseInt(v.substring(2, dot < 0 ? v.length() : dot));
+                }
+                int dot = v.indexOf('.');
+                return Integer.parseInt(dot < 0 ? v : v.substring(0, dot));
+            }
+        } catch (Exception ignored) {}
+        return -1;
+    }
+
+    private static boolean isMac() {
+        String os = System.getProperty("os.name", "").toLowerCase();
+        return os.startsWith("mac") || os.contains("darwin") || os.contains("os x");
+    }
+
+    private static boolean isLinux() {
+        String os = System.getProperty("os.name", "").toLowerCase();
+        return os.contains("linux") || os.contains("nix") || os.contains("nux");
+    }
+
+    private static boolean isWindows() {
+        return System.getProperty("os.name", "").toLowerCase().startsWith("windows");
     }
 
     /**
